--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 a {
-  color: #f82249;
+  color: #2622f8;
   text-decoration: none;
   transition: 0.5s;
 }
 
 a:hover, a:active, a:focus {
-  color: #f8234a;
+  color: #2622f8;
   outline: none;
   text-decoration: none;
 }
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #f82249;
+  background: #2622f8;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #f94a6a;
+  background: #2622f8;
   color: #fff;
 }
 .back-to-top.active {
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 60px;
   height: 5px;
-  background: #f82249;
+  background: #2622f8;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -147,7 +147,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #header #logo h1 span {
-  color: #f82249;
+  color: #2622f8;
 }
 #header #logo h1 a, #header #logo h1 a:hover {
   color: #fff;
@@ -168,11 +168,11 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .buy-tickets {
   color: #fff;
-  background: #f82249;
+  background: #2622f8;
   padding: 7px 22px;
   margin: 0 0 0 15px;
   border-radius: 50px;
-  border: 2px solid #f82249;
+  border: 2px solid #2622f8;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
   line-height: 1;
@@ -240,7 +240,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #f82249;
+  background-color: #2622f8;
   visibility: hidden;
   transition: all 0.3s ease-in-out 0s;
 }
@@ -366,7 +366,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #060c22;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #f82249;
+  color: #2622f8;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -392,7 +392,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #2622f8;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -416,7 +416,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero:before {
   content: "";
-  background: rgba(6, 12, 34, 0.8);
+  background: rgba(58, 60, 70, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -449,7 +449,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #hero h1 span {
-  color: #f82249;
+  color: #2622f8;
 }
 @media (max-width: 991px) {
   #hero h1 {
@@ -469,7 +469,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
+  background: radial-gradient(#2622f8 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -512,7 +512,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(198, 16, 0, 0);
 }
 #hero .play-btn:hover::after {
-  border-left: 15px solid #f82249;
+  border-left: 15px solid #2622f8;
   transform: scale(20);
 }
 #hero .play-btn:hover::before {
@@ -546,10 +546,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #f82249;
+  border: 2px solid #2622f8;
 }
 #hero .about-btn:hover {
-  background: #f82249;
+  background: #2622f8;
   color: #fff;
 }
 
@@ -662,7 +662,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #speakers .speaker .details a:hover {
-  color: #f82249;
+  color: #2622f8;
 }
 #speakers .speaker:hover .details {
   bottom: 0;
@@ -694,7 +694,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 #speakers-details .details .social a:hover {
-  background: #f82249;
+  background: #2622f8;
   color: #fff;
 }
 #speakers-details .details .social a i {
@@ -748,7 +748,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 #schedule .nav-tabs a.active {
-  background-color: #f82249;
+  background-color: #2622f8;
   color: #fff;
 }
 #schedule .sub-heading {
@@ -899,7 +899,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #152b79;
 }
 #hotels a:hover {
-  color: #f82249;
+  color: #2622f8;
 }
 #hotels .stars {
   padding: 0 20px;
@@ -932,10 +932,10 @@ h1, h2, h3, h4, h5, h6 {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f82249;
+  border: 1px solid #2622f8;
 }
 #gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f82249;
+  background-color: #2622f8;
 }
 #gallery .swiper-slide-active {
   text-align: center;
@@ -945,7 +945,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 40px 0;
   }
   #gallery .swiper-slide-active {
-    border: 5px solid #f82249;
+    border: 5px solid #2622f8;
     padding: 4px;
     background: #fff;
     z-index: 1;
@@ -1001,13 +1001,13 @@ h1, h2, h3, h4, h5, h6 {
 #faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #f82249;
+  font-family: #2622f8;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   padding-left: 25px;
   cursor: pointer;
-  color: #e0072f;
+  color: #2622f8;
   transition: 0.3s;
 }
 #faq .faq-list i {
@@ -1027,7 +1027,7 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
 }
 #faq .faq-list .collapsed:hover {
-  color: #f82249;
+  color: #2622f8;
 }
 #faq .faq-list .collapsed .icon-show {
   display: inline-block;
@@ -1084,7 +1084,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 0;
   padding: 9px 25px;
   cursor: pointer;
-  background: #f82249;
+  background: #2622f8;
   color: #fff;
   transition: all 0.3s ease;
   outline: none;
@@ -1092,7 +1092,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
 }
 #subscribe button:hover {
-  background: #e0072f;
+  background: #2622f8;
 }
 @media (max-width: 460px) {
   #subscribe button {
@@ -1139,12 +1139,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #2622f8;
   border: 0;
   color: #fff;
 }
 #buy-tickets .card .btn:hover {
-  background-color: #e0072f;
+  background-color: #2622f8;
 }
 #buy-tickets #buy-ticket-modal input, #buy-tickets #buy-ticket-modal select {
   border-radius: 0;
@@ -1154,12 +1154,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #2622f8;
   border: 0;
   color: #fff;
 }
 #buy-tickets #buy-ticket-modal .btn:hover {
-  background-color: #e0072f;
+  background-color: #2622f8;
 }
 
 /*--------------------------------------------------------------
@@ -1176,7 +1176,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #f82249;
+  color: #2622f8;
 }
 #contact .contact-info address, #contact .contact-info p {
   margin-bottom: 0;
@@ -1193,7 +1193,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #4869df;
 }
 #contact .contact-info a:hover {
-  color: #f82249;
+  color: #2622f8;
 }
 #contact .contact-address, #contact .contact-phone, #contact .contact-email {
   margin-bottom: 20px;
@@ -1212,7 +1212,7 @@ h1, h2, h3, h4, h5, h6 {
 #contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #2622f8;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1252,7 +1252,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 #contact .php-email-form input:focus, #contact .php-email-form textarea:focus {
-  border-color: #f82249;
+  border-color: #2622f8;
 }
 #contact .php-email-form input {
   padding: 10px 15px;
@@ -1261,7 +1261,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px 15px;
 }
 #contact .php-email-form button[type=submit] {
-  background: #f82249;
+  background: #2622f8;
   border: 0;
   padding: 10px 40px;
   color: #fff;
@@ -1270,7 +1270,7 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 #contact .php-email-form button[type=submit]:hover {
-  background: #e0072f;
+  background: #2622f8;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1344,7 +1344,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 #footer .footer-top .social-links a:hover {
-  background: #f82249;
+  background: #2622f8;
   color: #fff;
 }
 #footer .footer-top h4 {
@@ -1354,7 +1354,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 2px solid #f82249;
+  border-bottom: 2px solid #2622f8;
 }
 #footer .footer-top .footer-links {
   margin-bottom: 30px;
@@ -1366,7 +1366,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 5px;
-  color: #f82249;
+  color: #2622f8;
   font-size: 18px;
 }
 #footer .footer-top .footer-links ul li {
@@ -1380,7 +1380,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #eee;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #f82249;
+  color: #2622f8;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1397,7 +1397,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 65%;
 }
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #f82249;
+  background: #2622f8;
   border: 0;
   width: 35%;
   padding: 6px 0;
@@ -1407,7 +1407,7 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 #footer .footer-top .footer-newsletter input[type=submit]:hover {
-  background: #e0072f;
+  background: #2622f8;
 }
 #footer .copyright {
   text-align: center;
@@ -1417,4 +1417,42 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-size: 13px;
   color: #ddd;
+}
+
+/*--------------------------------------------------------------
+# Gallery Section
+--------------------------------------------------------------*/
+#gallery {
+  padding: 60px;
+  overflow: hidden;
+}
+#gallery .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+#gallery .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #2622f8;
+}
+#gallery .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #2622f8;
+}
+#gallery .swiper-slide-active {
+  text-align: center;
+}
+@media (min-width: 992px) {
+  #gallery .swiper-wrapper {
+    padding: 40px 0;
+  }
+  #gallery .swiper-slide-active {
+    border: 5px solid #2622f8;
+    padding: 4px;
+    background: #fff;
+    z-index: 1;
+    transform: scale(1.15);
+    margin-top: 6px;
+  }
 }
